changes for windows and linux

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body onload="onLoad()">
     <p>
       <img id="main_image"></img> 
-      <input id="main_user" value="jpalm@audible.com"></input>
+      <form>
+        <input id="main_user" name="main_user" value="jpalm@audible.com"></input>
+      </form>
     </p>
     <p>
       <button onclick="changeStatus(Communicator.Status.Online)">
