--- a/index.html
+++ b/index.html
@@ -6,36 +6,13 @@
       body {font-family: arial}
     </style>
   </head>
-  <body onload="onLoad()">
-    <p>
-      <img id="main_image"></img> 
-      <form>
-        <input id="main_user" name="main_user" value="jpalm@audible.com"></input>
-      </form>
-    </p>
-    <p>
-      <button onclick="changeStatus(Communicator.Status.Online)">
-	<img src="images/Online.png" /> Online
-      </button>
-      <button onclick="changeStatus(Communicator.Status.Offline)">
-	<img src="images/Offline.png" /> Offline
-      </button>
-      <button onclick="changeStatus(Communicator.Status.Away)">
-	<img src="images/Away.png" /> Away
-      </button>
-      <button onclick="changeStatus(Communicator.Status.Busy)">
-	<img src="images/Busy.png" /> Busy
-      </button>
-      <button onclick="changeStatus(Communicator.Status.BeRightBack)">
-	<img src="images/BeRightBack.png" /> BeRightBack
-      </button>
-      <button onclick="changeStatus(Communicator.Status.DoNotDisturb)">
-	<img src="images/DoNotDisturb.png" /> DoNotDisturb
-      </button>
-    </p>
-    <p>
-      Last changed on <em><span id="last_changed"></span></em>
-    </p>
-    <img style="display:none" id="com_img"></img>
+  <body onload="onLoad(names)">
+    <script type="text/javascript">
+      var names = [
+	'jpalm',
+      ];
+      writeFormStrings(names);
+      writeComString();
+    </script>
   </body>
 </html>
